src/css/style.css
/* ... */
#projet-ol li {
  margin-top: calc(0.5 * var(--rythme));
}

/*---PAGE 404--*/
.ascii {
  margin-left: auto;
  margin-right: auto;
  font-family: monospace;
  white-space: pre;
}

/*---ACCESSIBLITY---*/
.sr-only:not(:focus):not(:active) {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}


/*---TABLES---*/
table {
  border-collapse: collapse;
}

thead {
  backdrop-filter: blur(15px) contrast(90%);
  position: sticky;
  top: 0.1rem;
  margin-bottom: var(--rythme); /* or whatever row height */
}

th {
  font-weight: bold;
  background-color: var(--bglighten20);
}

th,
td,
caption {
  padding: calc(0.25 * var(--rythme));
  text-align: left;
}

tr {
  border-bottom: 1px solid var(--txt);
  background-color: var(--bglighten10);
}

/*---RESPONSIVE TABLES ON MOBILE : pour que ça fonctionne nécessaire que chaque td ait un attribute 'data-cell' qui soit égal au th de sa colonne, par exemple : th "job-title", td doit être <td data-cell="job-title">---*/
@media (width < 800px) {
  th {
    display: none;
  }
  td {
    display: grid;
    grid-template-columns: 15ch auto;
    word-wrap: anywhere;
    gap: calc(0.75 * var(--rythme));
    padding: calc(0.25 * var(--rythme));
  }
  td::before {
    content: attr(data-cell) ": ";
    font-weight: 700;
  }
  td:first-child {
    padding-top: calc(0.5 * var(--rythme));
  }
  td:last-child {
    padding-bottom: calc(0.5 * var(--rythme));
  }
}

/*---MEDIA QUERY AFFICHAGE MOBILE---*/
@media (width < 1000px) {
  /* HAMBURGER MENU */
  #homepage-menu {
    position: unset;
    font-size: unset;
  }
  #primary-navigation {
    display: none;
  }

  .mobile-nav-toggle {
    display: block;
    color: inherit;
    position: absolute;
    z-index: 9999;
    width: 2rem;
    aspect-ratio: 1;
    border: 0;
    top: calc(2 * var(--rythme));
    left: var(--rythme);
    background-color: unset;
  }

  #hamburger-button-close {
    margin-bottom: var(--rythme);
  }

  #hamburger-button-close svg {
    fill: var(--txt);
  }

  #mobile-navigation[popover] {
    left: 0;
    top: 0;
    height: 100dvh;
    width: 60dvw;
    padding: calc(3 * var(--rythme)) var(--rythme);
    border: none;
    content-visibility: auto;
    contain-intrinsic-size: 100vh 60dvw;
    background-color: hsla(0, 0%, 42%, 0.3);
    backdrop-filter: blur(45px);
    transition: transform .1s ease-out, opacity .1s ease-out, display .1s ease-out, overlay .1s ease-out;
    transition-behavior: allow-discrete;
    /*POPOVER IN EXIT STATE */
    opacity: 0;
    transform: translateX(-30vw);
    
    &:popover-open {
    /*POPOVER IN OPEN STATE*/
    opacity: 1;
    transform: none;

      /*POPOVER BEFORE THE OPENING*/
      @starting-style {
        opacity: 0;
        transform: translateX(-30vw);
      }
    }
  }

  #mobile-navigation ul {
    writing-mode: horizontal-tb;
    transform: none;
    border-left: none;
    display: flex;
    gap: var(--rythme);
    flex-direction: column;
  }

  #mobile-navigation li {
    border-right: none;
    border-bottom: 2px solid var(--txt);
    padding-block: calc(0.125 * var(--rythme));
    font-family: Inter-Variable, Helvetica, sans-serif;
    padding-left: 0;
    font-weight: 600;
    color: var(--txt);
  }
  /* FIN HAMBURGER MENU */

  #homepage-services-grid {
    display: flex;
    flex-direction: column;
  }
  .homepage-projets-grid-item__right__titleanddesc span {
    color: var(--txt) !important;
  }
  .homepage-services-item-header {
    flex-wrap: nowrap;
  }
  #homepage-hero,
  .homepage-footer {
    max-width: 100dvw;
  }

  #project-card-container {
    grid-template-columns: unset !important;
  }

  #project-card-container > * + * {
    margin-top: var(--rythme) !important;
  }

  #homepage-container > main {
    margin-top: calc(4 * var(--rythme));
  }

  #normal-page-container > main {
    margin-top: calc(2 * var(--rythme));
  }

  /*---HOMEPAGE PROJETS---*/
  #homepage-projets-grid {
    display: flex;
    flex-direction: column;
    gap: calc(2 * var(--rythme));
  }

  #homepage-prose {
    flex-wrap: wrap;
  }
  #homepage-prose > * {
    flex-basis: auto;
  }

  #homepage-hero {
    padding-block: unset;
  }
  /* INDISPENSABLE POUR PAS QUE LE MENU ROTATE EN DIMINUANT LARGEUR DE LA PAGE */
  .menu-anim {
    transform: rotate(0deg) !important;
  }
}
/*---MEDIA QUERY POUR ENLEVER LE HAMBURGER POPOVER QUAND ON REVIENT SUR DESKTOP ---*/
@media (width > 1000px) {
  #mobile-navigation {
    display: none;
  }
}

/*---ACCESSIBILITY---*/
[aria-current="page"] {
  font-weight: 700;
  color: var(--accent) !important;
}

/*---VIEW TRANSITIONS---*/
@view-transition {
  navigation: auto;
}

/*---ESSAIS LINK ON BLOG PAGE---*/
#essais-linker {
  transition: color .2s ease-out;
  &:hover{
    color: var(--txt)!important;
  }
}

